--- a/app/views/hold_templates/_form.html.erb
+++ b/app/views/hold_templates/_form.html.erb
@@ -16,7 +16,7 @@
   Number of Rows in Grid: <%= f.text_field :row_count %><br />
   Number of Columns in Grid: <%= f.text_field :column_count %><br />
 
-  <%-# Selectable cells are determined by updating a template that already exists.%>
+  <%-# Selectable cells are determined by updating a template that already exists, using the edit/update_selectable_cells actions%>
 
   <div class="actions">
     <%= f.submit %>
