--- a/app/views/hold_templates/edit.html.erb
+++ b/app/views/hold_templates/edit.html.erb
@@ -3,6 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @hold_template %> |
+<%= link_to 'Edit Selectable Cells', edit_selectable_cells_hold_template_path %> |
 <%= link_to 'Back', hold_templates_path %>
-
-<%= render "shared/hold_grid", :model => @hold_template %>
