--- a/app/assets/stylesheets/hold_templates.css.scss
+++ b/app/assets/stylesheets/hold_templates.css.scss
@@ -25,7 +25,7 @@
 }
 
 .hover {
-  background-color: rgba(255,255,0,0.4); //translucent yellow if selected
+  background-color: rgba(255,255,0,0.4); //translucent yellow if hovered over
 }
 
 .selected {
