--- a/app/views/admin/vessels/show.html.erb
+++ b/app/views/admin/vessels/show.html.erb
@@ -3,6 +3,7 @@
 <%= link_to "Add hold", new_admin_vessel_hold_path(@vessel) %><br/>
 
 <% if @vessel.holds %>
+    <h3>Holds:</h3>
     <ul>
       <% @vessel.holds.each do |hold| %>
           <%= link_to hold.name, admin_vessel_hold_path(@vessel,hold) %><br/>
