cleaned up code for gon ajax calls

--- a/app/views/admin/holds/update_selectable_cells.js.erb
+++ b/app/views/admin/holds/update_selectable_cells.js.erb
@@ -19,6 +19,6 @@ $('#grid td').each( function(index,value) {
         $(this).attr("data-selectable","true");
         $(this).addClass("selected");
     } else {
-        //nothing
+        // do nothing
     }
 });
