--- a/app/views/homepage/home.html.erb
+++ b/app/views/homepage/home.html.erb
@@ -1,4 +1,4 @@
 <div id= "homepage_links">
-  <%= link_to "Back Load Planning" %>
+  <%= link_to "Back Load Planning", voyages_path %>
   <%= link_to "Vessel Setup", admin_vessels_path %>
 </div>
