--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,11 @@
 <html>
 <head>
   <title>Backload</title>
-  <%= include_gon :watch => true %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body data-controller = "<%= controller_name %>" data-action = "<%= action_name %>">
 
 <%= yield %>
 
